--- a/packages/canopee-css/src/prospect-client/Heading/HeadingLF.css
+++ b/packages/canopee-css/src/prospect-client/Heading/HeadingLF.css
@@ -2,16 +2,12 @@
 
 .af-heading {
   --heading-grid-column: 1;
-  --heading-column-gap: calc(12 / var(--font-size-base) * 1rem);
+  --heading-column-gap: calc(8 / var(--font-size-base) * 1rem);
   --heading-title-color: var(--color-gray-900);
   --heading-subtitle-color: var(--color-gray-900);
   --heading-subtitle-font-size: calc(16 / var(--font-size-base) * 1rem);
   --heading-title-font-weight: 700;
   --heading-title-line-height: 125%;
-
-  &:has(h2, h3, h4) {
-    --heading-column-gap: calc(8 / var(--font-size-base) * 1rem);
-  }
 
   h1 {
     --heading-title-color: var(--color-blue-800);
